添加mini版ajax原生代码

--- a/ajax.html
+++ b/ajax.html
@@ -32,6 +32,33 @@
         </div>
 
         <script>
+          // 简单的ajax对象
+          var myAjax = {
+            // XMLHttpRequest IE7+, Firefox, Chrome, Opera, Safari ；  ActiveXObject IE6, IE5
+            xhr: window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject('Microsoft.XMLHTTP'),
+            get: function(url, callback){
+              this.xhr.open('get', url);
+              this.onreadystatechange(callback, this.xhr);
+              this.xhr.send(null);
+            },
+            post: function(url, data, callback){
+              this.xhr.open('post', url);
+              this.xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+              this.onreadystatechange(callback, this.xhr);
+              this.xhr.send(data);
+            },
+            onreadystatechange: function(func, _xhr){
+              _xhr.onreadystatechange = function(){
+                if(_xhr.readyState == 4){
+                  if (_xhr.status == 200){
+                    func(_xhr.responseText);
+                  }
+                }
+              }
+            }
+          };
+        </script>
+        <script>
           var get_btn = document.getElementById('getBtn');
           var post_btn = document.getElementById('postBtn');
           var put_val = document.getElementById('putVal');
@@ -129,7 +156,6 @@
             url += encodeURIComponent(name) + "=" + encodeURIComponent(value);
             return url;
           }
-
         </script>
 
     </body>
