--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -46,7 +46,7 @@
 
           /*文字垂直居中对齐，table-cell IE8以下不兼容； http://www.hacke2.cn/div-center/*/
           .vertical-wrap{ display:table-cell; width:550px; height:100px; padding:0 15px; border:4px solid #beceeb; color:#069; font-size:14px; vertical-align:middle; }
-          .ver-txt{ display:inline-block;  font-size:14px;  vertical-align:middle; }
+          .ver-txt{ display:inline-block;  font-size:14px; }
           .demo { display: none; }
           /*多栏高度相等(等高实现)*/
           .d-col-cont{ overflow:hidden; }
