IE组合样式兼容问题添加

--- a/IESupport.html
+++ b/IESupport.html
@@ -110,7 +110,8 @@
         // 13.IE6下 设置为 display:none;并且生效后的dom节点竟然不消失！！！（神奇，待模拟重现）解决：ie6 下在原有基础上新增样式：visibility:hidden; (还不行就用其他方式隐藏， 例如：宽高为零，绝对定位位置偏移至无法看见的位置；)
         // 14.IE6下 a 标签去除默认跳转事件， 常规用法对比：javascript:void(0); 比较常见，但可能会导致问题，最佳方案： <a href="####" onclick="return false;"></a>
         //  对应教程：http://segmentfault.com/q/1010000000339082
-        // 15.IE6下 复合样式如果有相同的样式名且共用一个父类，样式会异常（具体看demo）
+        // 15.IE6下 IE6 CSS类名优先级；CSS多类选择符优先级不起作用，多么的令人气愤啊，经过测试：IE6下这种类组合的优先级不如单个类；（具体看demo）
+        // 16.IE6 IE7, 块级元素（如:div）如使用：white-space:nowrap;进行强制不换行，需要设置长度才能生效；
       </script>
 
     </body>
