--- a/utilsTest.html
+++ b/utilsTest.html
@@ -10,7 +10,7 @@
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
       <style>
-        .dragg_div{ width:200px; height:200px; background-color:#222; }
+        .dragg_div{ width:200px; height:200px; background-color:#222; color:#fff; line-height: 200px; font-size:14px; text-align: center; cursor:move; }
       </style>
     </head>
     
@@ -27,7 +27,7 @@
         <span id="lBtnTips"></span>
       </p>
       <br/>
-      <div class="dragg_div" id="dragg_div"></div>
+      <div class="dragg_div" id="dragg_div">可拖动的方块</div>
       <!--[if lt IE 8]>
         <script type="text/javascript" src="lib/json2.js"></script>
       <![endif]-->
@@ -43,7 +43,7 @@
             // this.insertScript();
             // initlocalStorageDemo();
             // 测试移动库
-            new Draggable({"wrapper": $("#dragg_div")});
+            new Draggable({"wrapper": $("#dragg_div"), "boundary": "window"});
           },
           insertScript: function(){
             var COOKIE_URL = 'utils/cookieUtil.js';
