--- a/nodeOperate.html
+++ b/nodeOperate.html
@@ -9,61 +9,16 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <style>
-      #btnList{
-        margin: 20px 0px 0px;
-      }
-      #tipCont{
-        margin: 100px 0px 0px;
-      }
-      .nodeDetail{
-        position:absolute;
-        border:1px solid #000;
-        width: 600px;
-        height: 400px;
-        display: none;
-      }
-      .dialog-mask{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color:#;
-      }
-      .modal-head{
-        height:35px;
-        width:100%;
-        background-color: #0085DB;
-        line-height: 35px;
-        color:#fff;
-        text-align: center;
-      }
-      .search{
-        padding: 10px;
-      }
-      .modify{
-        padding: 10px;
-      }
-      .close{
-        position: absolute;
-        width:30px;
-        height:30px;
-        line-height: 30px;
-        top:0px;
-        right:0px;
-        cursor: pointer;
-        font-size:30px;
-        text-align:center;
-        color: #ccc;
-        font-weight: bold;
-        font-family: 'simsun';
-      }
-      .close:hover{
-        color: #ddd;
-        text-decoration: none;
-      }
-      .m-tips{
-        display: none;
-        color: red;
-      }
+      #btnList{ margin: 20px 0px 0px; }
+      #tipCont{ margin: 100px 0px 0px; }
+      .nodeDetail{ position:absolute;border:1px solid #000;width: 600px;height: 400px;display: none; }
+      .dialog-mask{ position: absolute;width: 100%;height: 100%;}
+      .modal-head{ height:35px;width:100%;background-color: #0085DB;line-height: 35px;color:#fff;text-align: center; }
+      .search{ padding: 10px; }
+      .modify{ padding: 10px; }
+      .close{ position: absolute; width:30px; height:30px; line-height: 30px; top:0px; right:0px; cursor: pointer; font-size:30px; text-align:center; color: #ccc; font-weight: bold; font-family: 'simsun'; }
+      .close:hover{ color: #ddd; text-decoration: none; }
+      .m-tips{ display: none; color: red; }
     </style>
   </head>
 
