--- a/array.html
+++ b/array.html
@@ -169,7 +169,7 @@ http://www.w3.org/TR/html4/strict.dtd">
         
         <div id="sortPanel" class="panel">
           <p>数组排序算法总结：<a href="http://jsdo.it/norahiko/oxIy/fullscreen" alt="jpan">日本人编写的排序动画</a></p>
-          <p>原始数组： [8,2, 3, 55, 12, 20, 16, 18, 15, 20, 11, 7]</p>
+          <p>原始数组： [5,6,3,4,9,7,8,12,10,11,2,1]</p>
           <div class="radio-list">
             <input type="radio" name="sort" data-id="s1"/>
             <label>插入排序</label>
@@ -656,7 +656,7 @@ http://www.w3.org/TR/html4/strict.dtd">
           xq.unique_fns = {};
           xq.sort_fns = {};
           xq.random_fns = {};
-          xq.sort_array = [8,2, 3, 55, 12, 20, 16, 18, 15, 20, 11, 7];
+          xq.sort_array = [5,6,3,4,9,7,8,12,10,11,2,1];
 
           init();
 
