--- a/vue/vue_vs_jquery.html
+++ b/vue/vue_vs_jquery.html
@@ -563,7 +563,7 @@
       <script type="text/javascript" src="../lib/jquery-1.10.2.min.js"></script>
 
       <script type="text/javascript">
-        // 全局变量
+        // 全局变量（方便调试， 浏览器控制台直接能查看VUE对象：xq.vm）
         var xq = {};
 
         init();
@@ -1035,7 +1035,6 @@
               }
             }
           }
-
         });
       </script>
     </body>
