初始化日期例子例子添加

--- a/Date.html
+++ b/Date.html
@@ -57,6 +57,14 @@
           var data2 = new Date(1445922341227);
           console.log("data1: " + data1);
           console.log("data2: " + data2);
+          // 创建一个日期对象： var objDate=new Date([arguments list]); 
+          // 参数形式有以下5种： 
+          // 1）new Date("month dd,yyyy hh:mm:ss"); 
+          // 2）new Date("month dd,yyyy"); 
+          // 3）new Date(yyyy,mth,dd,hh,mm,ss); 
+          // PS: 第三种初始化方法，一定要是整型;(别传字符串)
+          // 4）new Date(yyyy,mth,dd); 
+          // 5）new Date(ms); 
         }
         // new Date 浏览器兼容
         // http://blog.csdn.net/blueheart20/article/details/44902747
