--- a/ajax.html
+++ b/ajax.html
@@ -59,10 +59,10 @@
           };
         </script>
         <script>
-          var get_btn = document.getElementById('getBtn');
-          var post_btn = document.getElementById('postBtn');
-          var put_val = document.getElementById('putVal');
-          var show_res = document.getElementById('showResult');
+          var get_btn = document.getElementById('getBtn'),
+            post_btn = document.getElementById('postBtn'),
+            put_val = document.getElementById('putVal'),
+            show_res = document.getElementById('showResult');
           get_btn.onclick = getBtnClick;
           post_btn.onclick = postBtnClick;
 
