--- a/IESupport.html
+++ b/IESupport.html
@@ -63,6 +63,9 @@
         // 模拟低版本浏览器 安装虚拟机： virtualbox，然后 将文件放置在模拟服务器中让虚拟机配置host访问（同个网段可以相互访问）
         // ie developer toolbar 查看某节点对应样式比较方便， firebug lite 则方便脚本操作，例如脚本报错，控制台日志，控制台代码执行等；
         // 虚拟机相关教程：http://www.i7086.com/xunijivirtualboxanzhuangwindowscaozuoxitong
+
+        /*IE6 PSD图中的透明 均无法正常显示， 实现时得注意*/
+
         var IEObj = {
           init: function(){
             var This = this;
