--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -106,6 +106,9 @@
           */
           .gray { -webkit-filter: grayscale(100%);-moz-filter: grayscale(100%);-ms-filter: grayscale(100%);-o-filter: grayscale(100%);filter: grayscale(100%);filter: gray; }
           /*http://www.cnblogs.com/qiyebao/p/4028129.html*/
+
+          /* position 跟 z-index 的关系； z-index只能在position属性值为relative或absolute或fixed的元素上有效。 http://www.cnblogs.com/mind/archive/2012/04/01/2198995.html */
+
         </style>
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
