新增flash与js通信demo

--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
           </li>
 
           <li>
+            <p>21.flash与js通信:</p>
+            <ul>
+              <li><a href="flashDemo/index.html" target="_blank">flashDemo/index.html</a></li>
+            </ul>
+          </li>
+
+          <li>
             <p>other:</p>
             <ul>
               <li><a href="others/renrenTest.html" target="_blank">人人网鄙视题</a></li>
