--- a/flashDemo/sendStar.html
+++ b/flashDemo/sendStar.html
@@ -14,17 +14,6 @@
       	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
       	<script>
       		window.hideFlash = hideFlash;
-      		// sendStar.swf为新生成的swf 调用 hideFlash 函数
-      		// sendStar_2.swf位旧的swf，旧swf文件调用 _modjsToPage_.hideStarSwf 函数
-   			// if (window._modjsToPage_) {
-			// 	window._modjsToPage_['showStarSwf'] = showFlash;
-			// 	window._modjsToPage_['hideStarSwf'] = hideFlash;
-			// } else {
-			// 	window._modjsToPage_ = {
-			// 		'showStarSwf': showFlash,
-			// 		'hideStarSwf': hideFlash
-			// 	}; 
-			// }
 
 	        // 全局被调用函数
       	 	window.onload = function(){
@@ -58,5 +47,7 @@
 	         <param name="allowScriptAccess" value="always">
 	         <param name="wmode" value="transparent">
 		</object> -->
+		<!-- embed方式 -->
+		<!-- <embed src="sendStar.swf" quality="high" type="application/x-shockwave-flash" width="100%" height="100%" wmode="transparent"></embed> -->
  </body>
 </html>
