新增flash参数调用demo

--- a/flashDemo/index.html
+++ b/flashDemo/index.html
@@ -20,11 +20,19 @@
         <h3><a id="flash_demo" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a>flash Demo 列表</h3>
         <ul>
           <li>
-            <p>1.flash(swf文件)与js通信；</p>
+            <p>1.flash(swf文件)调用js方法；</p>
             <ul>
               <li><a href="sendStar.html" target="_blank">sendStar.html</a></li>
             </ul>
           </li>
+
+          <li>
+            <p>2.flash 与 js 的参数传递；</p>
+            <ul>
+              <li><a href="sendMultStar.html" target="_blank">sendMultStar.html</a></li>
+            </ul>
+          </li>
+
         </ul>
       </div>
 
