--- a/iframe.html
+++ b/iframe.html
@@ -46,6 +46,7 @@
               };
               iframeHeight();
 
+              // http://wteamxq.com/photoDemo/  域名已失效， 可在本地虚拟服务器例如 tomcat上 新建两个不同端口的工程测试跨域；
               // "http://wteamxq.com/photoDemo/"  中配合脚本：
               // window.onload = function(){
               //   // 设置父类url
