删除提示文件（后续gitignore忽略）

--- a/sass/index.html
+++ b/sass/index.html
@@ -10,11 +10,22 @@
       </title>
       <link rel="icon" href="../favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-      <link rel="stylesheet" type="text/css" href="./demo.css" />
+      <link rel="stylesheet" type="text/css" href="demoCssFolder/demo.css" />
     </head>
     
     <body>
-      <h3>sass学习</h3>
+      <h2>sass学习</h2>
 
+      <h3>sass 7大特性<h3>
+      <!-- 变量、嵌套、导入、mixin（函数）、继承、运算、颜色 -->
+      <ol class="sass_features">
+        <li>变量</li>
+        <li>嵌套</li>
+        <li class="key_point">导入(样式模块化开发， 实用！)</li>
+        <li>mixin（函数）</li>
+        <li>继承</li>
+        <li>运算</li>
+        <li>颜色</li>
+      </ol>
     </body>
 </html>
